# poc

./: AGENTS.md  README.md  pyproject.toml
deep_coder/: cli.py  graph.py  state.py
deep_coder/prompts/: system.py
