[project]
name = "deep-coder"
version = "0.1.0"
description = "Deep coding agent with iterative refinement and verification-first planning"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4",
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
]

[project.scripts]
deep-coder = "deep_coder.cli:main"
